<resources>

    <string name="app_name">CarryMyBag</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="facebook_app_id">1013965892054918</string>
    <string name="razorpay_id">rzp_test_T164uvPbChdWbN</string>

    <string-array name="navDrawerItems">
        <item>Book Now</item>
        <item>Track Now</item>
        <item>How it Works</item>
        <item>Settings</item>
        <item>About Us</item>
        <item>Logout</item>

    </string-array>

    <string-array name="navDrawerIcons">

        <item>@drawable/padnote</item>
        <item>@drawable/track</item>
        <item>@drawable/presentation</item>
        <item>@drawable/settings</item>
        <item>@drawable/aboutus</item>
        <item>@drawable/logout</item>
    </string-array>

    <string name="title_activity_first_fragment">Book Now</string>
    <string name="title_activity_second_fragment">Track</string>
    <string name="title_activity_third_fragment">How it Works</string>
    <string name="title_activity_forth_fragment">Settings</string>
    <string name="title_activity_fifth_fragment">About Us</string>
    <string name="title_activity_sixth_fragment">Logout</string>


    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>


    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>
    <string name="starred_string">Track Now</string>
    <string name="inbox_string">Book Now</string>
    <string name="sent_mail_string">About Us</string>
    <string name="draft_string">Contact Us</string>
    <string name="subheader">Subheader</string>
    <string name="trash_string">Logout</string>
    <string name="all_mail_string">Settings</string>
    <string name="spam_string">Spams</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>

    <string name="contact_us">Contact Us</string>
    <string name="contact_us_desc">For any queries or problems, contact Carry My Bag on 8687688(Phone Number) or send us an Email.</string>
    <string name="contact_address">ABC,XYZ Gugaon,Haryana-100200</string>
    <string name="about_us">About Us</string>
    <string name="about_us_desc">We carry your luggage from your home in the city of departure, to your hotel in the city of arrival, so that you can have a relaxing journey without wasting any time!</string>
    <string name="offer_1">1. Relaxing Journey as there is no check in bag to carry to the airport and vice-versa.</string>
    <string name="offer_2">2. Save 2-4 hour while you travel.</string>
    <string name="offer_3">3. Save money by using Metro service to and from the airport.</string>
    <string name="offer_4">4. Flexible planning as no handling of luggage is required.</string>
    <string name="transaction_successful">Your transaction is successful and order has been successfully placed.</string>
    <string name="order_info">Your order is now being processed and you would be updated about the progress.</string>
    <string name="title_activity_welcome">WelcomeActivity</string>

    <string name="text_logo">Travel anywhere without worrying about your bags!</string>
    <string name="carry_my_bag">Carrying your bags is now easier!!</string>
    <string name="book_delivery">Book a Delivery</string>
    <string name="text_book_delivery">Book a delivery by placing an order on our android application. Our online order process is simple and easy to use.</string>
    <string name="pickup_delivery">Pickup and Delivery</string>
    <string name="text_pickup_delivery">We carry your luggage from your home in the city of departure, to your hotel in the city of arrival, so that you can have a relaxing journey without wasting any time! </string>
    <string name="luggage_tags">Receive Luggage tags</string>
    <string name="text_luggage_tags">Decide whether to include this or not.</string>
</resources>
