<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    xmlns:fb="http://schemas.android.com/tools"
    android:background="#FFFFFF"
    android:layout_height="match_parent">



<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="10dp">



    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:textColorHint="@color/white"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:textColor="@color/grey"
            android:textColorHint="@color/white"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/hint_password" />
    </android.support.design.widget.TextInputLayout>

    <!-- Login Button -->

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="#c13d4a"
        android:text="@string/btn_login"
        android:textColor="@color/white" />

    <!-- Link to Login Screen -->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forget Password"
        android:textColor="#c13d4a"
        android:id="@+id/forgetpass"
        android:layout_gravity="right"
        android:background="@null"
        android:textSize="15dp"/>

    <Button
        android:id="@+id/btnLinkToRegisterScreen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/btn_link_to_register"
        android:textAllCaps="false"
        android:textColor="@color/Primary"
        android:textSize="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="OR"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/grey"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dip"
        android:orientation="horizontal"
        android:layout_height="60dip">
        <LinearLayout
            android:layout_width="120dip"
            android:layout_alignParentLeft="true"
            android:layout_height="wrap_content">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/btnGoogle"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Google+"
                android:textSize="15dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="120dip"
            android:layout_alignParentRight="true"
            android:layout_height="75dip">

            <com.facebook.login.widget.LoginButton
                xmlns:fb="http://schemas.android.com/apk/res-auto"
                android:id="@+id/fb_login_button"
                android:text="Facebook"
                android:layout_width="match_parent"
                fb:com_facebook_login_text="Sign in"
                android:textSize="13sp"
                android:paddingTop="14sp"
                android:paddingBottom="14sp"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </RelativeLayout>

</LinearLayout>

</android.support.design.widget.CoordinatorLayout>